supprimer ordinateur - ménage dans les fichiers de test